# SimpleCTC

./: README.md
example/: CMakeLists.txt  README  main.cpp  test_128x128.binary
matlab/: ContourTreeConnectivity.m  README  example_CTC.m  matlab_setup.m
src/: BoundaryDetection.cpp  BoundaryDetection.h  DistanceTransform.cpp  DistanceTransform.h  SimpleCTC.cpp  SimpleCTC.h
src/cmake/modules/: FindMPI.cmake  FindMPI.cmake~  FindPETSc.cmake  FindPETSc.cmake~  FindSLEPc.cmake  FindSLEPc.cmake~
